--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Erik Nelson <erik@nsk.io>"]
 readme = "README.md"
-packages = [{include = "workflow_testing"}]
+packages = [{include = "workflow"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -12,6 +12,9 @@ python = "^3.10"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.0"
 pylint = "^2.17.2"
+
+[tool.poetry.scripts]
+workflow = "workflow:main"
 
 [build-system]
 requires = ["poetry-core"]
