--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -8,35 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - name: Init runtime
-        run: |
-          python3 -m ensurepip
-          pip3 install --no-cache --upgrade pip setuptools
-          pip3 install poetry
-          poetry env info
-          poetry install
+      - uses: ./.github/actions/init-runtime.yaml
       - name: Lint
-        run: |
-          scripts/lint.sh
-  # Test:
-  #   runs-on: ubuntu-latest
-  #   - name: Set up Python ${{ matrix.python-version }}
-  #     uses: actions/setup-python@v4
-  #     with:
-  #       python-version: '3.11'
-  #   - name: Init runtime
-  #     run: |
-  #       python3 -m ensurepip
-  #       pip3 install --no-cache --upgrade pip setuptools
-  #       pip3 install poetry
-  #       poetry env info
-  #       poetry install
-  #   - name: Test
-  #     run: |
-  #       scripts/test.sh
-  # ImageBuild:
-  #   runs-on: ubuntu-latest
+        run: ./scripts/lint.sh
+  Test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/init-runtime.yaml
+      - name: Test
+        run: ./scripts/test.sh
