--- a/.github/actions/init-runtime/action.yaml
+++ b/.github/actions/init-runtime/action.yaml
@@ -9,9 +9,11 @@ runs:
   using: composite
   steps:
   - uses: actions/checkout@v3
-  - run: pipx install poetry
+  - shell: bash
+    run: pipx install poetry
   - uses: actions/setup-python@v4
     with:
       python-version: '3.11'
       cache: poetry
-  - run: poetry install
+  - shell: bash
+    run: poetry install
