--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -18,3 +18,27 @@ jobs:
       - uses: ./.github/actions/init-runtime
       - name: Test
         run: ./scripts/test.sh
+  Build:
+    runs-on: ubuntu-latest
+    env:
+      img_reg: ghcr.io
+      img_repo: eriknelson
+      img_name: workflow-testing
+    steps:
+      - uses: actions/checkout@v3
+      - name: Extract branch name and set as img_tag (push events)
+        if: github.event_name == 'push'
+        run: |
+          echo "img_tag=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+          echo "branch=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+      - name: Extract branch name and set as img_tag (pull_request events)
+        if: github.event_name == 'pull_request'
+        run: |
+          echo "img_tag=${{ github.base_ref }}" >> $GITHUB_ENV
+          echo "branch=${{ github.base_ref }}" >> $GITHUB_ENV
+      - name: Set fqin
+        run: |
+          echo "fqin=${{env.img_reg}}/${{env.img_repo}}/${{env.img_name}}:${{env.img_tag}}" >> $GITHUB_ENV
+      - name: Build docker image
+        run: |
+          docker build -t ${{env.fqin}} -f docker/Dockerfile .
