--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,6 +7,7 @@ jobs:
   Verify:
     uses: ./.github/workflows/verify.yaml
   Publish:
+    runs-on: ubuntu-latest
     steps:
       - name: Download image
         uses: ishworkh/docker-image-artifact-download@v1
