--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,3 +14,7 @@ jobs:
         uses: ishworkh/docker-image-artifact-download@v1
         with:
           image: '${{needs.Verify.outputs.fqin}}'
+      - name: List docker images
+        run: |
+          docker images
+          ls /tmp
